# mnbt

./: .gitignore  README.md  app.py  generate_lookup.py  main.py  mnbt.py  pyproject.toml  requirements.txt  run_app.sh  setup_nginx.sh
lib/: defaults.py  html.py  mnbt.py
tests/: test_mnbt.py
